# paparazzi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clean  compile  compile.sh  configure.sh  fonts  index.php  install.sh  key_gen  package.json  paparazzi.cpp  paparazzi.sh  scene.yaml  server.js  server.py  server.sh  setup  start  stop.sh  worker.sh  zmq_server.js
proxy/: Makefile
proxy/src/: main.cpp
src/: context.cpp  context.h  fbo.cpp  fbo.h  image_out.cpp  image_out.h  main.cpp  paparazzi.cpp  paparazzi.h  platform_headless.cpp  platform_headless.h  platform_rpi.cpp  utils.cpp  utils.h  zeromq.h
src/common/: fbo.cpp  fbo.h  image_out.h
src/gl/: fbo.cpp  fbo.h  shader.cpp  vLayout.cpp  vLayout.h  vbo.cpp  vbo.h
src/linux/: main.cpp
src/rpi/: main.cpp
src/tools/: aab.cpp  aab.h  fbo.cpp  fbo.h  shader.cpp  shader.h
src/types/: mesh.cpp  mesh.h  shapes.cpp
worker/: CMakeLists.txt
worker/src/: context.cpp  context.h  paparazzi.cpp  paparazzi.h  platform_headless.cpp
worker/src/tools/: aab.cpp  aab.h  fbo.h  shader.cpp
